--- a/index.html
+++ b/index.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html >
 <html lang="en">
 <head>
-    
+    <link rel="stylesheet" href="style.css">
 <title>Product_landing</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <header id="header">
-<img  id="header_image" src="h.png" alt="culariti image">
+<img  id="header-img" src="h.png" alt="culariti image">
 <nav id="nav-bar">
-
+<a  class="nav-link" href="#my-profile">My Profile</a> | 
+<a  class="nav-link" href="#My-projects">My Projects</a> |
+<a class="nav-link" href="#Contact-me">Contact-me</a><br>
 </nav>
 </header>
+<iframe width="420" height="315" id="video"
+src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1&mute=1">
+</iframe>
+<form id = "form">
+    <label for="email" id="email">Email</label>
+    <input type="email" id="email" name="email" placeholder="Enter Your Mail" required>
+    <input type="submit" id="submit">
+
+</form>
 </body>
+
 <footer>
 
 </footer>
