--- a/index.html
+++ b/index.html
@@ -10,23 +10,34 @@
 <header id="header">
 <img  id="header-img" src="h.png" alt="culariti image">
 <nav id="nav-bar">
-<a  class="nav-link" href="#my-profile">My Profile</a> | 
-<a  class="nav-link" href="#My-projects">My Projects</a> |
-<a class="nav-link" href="#Contact-me">Contact-me</a><br>
+    <ul id="menu">
+        <li>
+            <a  class="nav-link" href="#video">My Profile</a>
+        </li>
+        <li>
+            <a  class="nav-link" href="#form">My Projects</a>
+        </li>
+        <li>
+            <a class="nav-link" href="#copyright">Contact-me</a>
+        </li>
+    </ul>
+
+
+
 </nav>
 </header>
 <iframe width="420" height="315" id="video"
 src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1&mute=1">
 </iframe>
-<form id = "form">
+<form id = "form" action="https://www.freecodecamp.com/email-submit">
     <label for="email" id="email">Email</label>
-    <input type="email" id="email" name="email" placeholder="Enter Your Mail" required>
+    <input type="email" id="email" name="email" placeholder="Enter Your Mail" value="Enter your mail"required>
     <input type="submit" id="submit">
 
 </form>
 </body>
 
 <footer>
-
+<h3 id="copyright">copyrights</h3>
 </footer>
 </html>
